[package]
name = "cpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.78"
autocxx = "0.26.0" 
uwuify = "0.2.2"
textwrap = "0.15"
fastrand = "1.5.0"
bindgen = "0.69.1"

[build-dependencies]
autocxx-build = "0.26.0" 
regex = "1.5.4"
miette = { version = "5", features = ["fancy"] }
